PoSClarity v1.0 Funcionando Main correctamente se crea ventasview modificacion de fxml de ventas abarcando datos de vendedor, cliente y tabla de pructos